Implemented Account Attributes API
